Men detta är roligt.